--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,4 @@ markdown: kramdown
 
 kramdown:
   input: GFM
-  hard_wrap: false
-  syntax_highlighter_opts:
-    disable: true
+  syntax_highlighter: rouge
